// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination memo > matches snapshot for memoized Pagination 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center gap-2"
  >
    <div
      class="flex flex-wrap justify-center gap-1 overflow-hidden"
    >
      <button
        class="sort sort-in-active"
      >
        1
      </button>
      <button
        class="sort sort-in-active"
      >
        2
      </button>
      <button
        class="sort sort-active"
        disabled=""
      >
        3
      </button>
      <button
        class="sort sort-in-active"
      >
        4
      </button>
      <button
        class="sort sort-in-active"
      >
        5
      </button>
    </div>
    <div
      class="flex gap-2 mt-1"
    >
      <button
        class="sort-next"
      >
        Prev
      </button>
      <button
        class="sort-next"
      >
        Next
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginationComponent > matches snapshot with first page 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center gap-2"
  >
    <div
      class="flex flex-wrap justify-center gap-1 overflow-hidden"
    >
      <button
        class="sort sort-active"
        disabled=""
      >
        1
      </button>
      <button
        class="sort sort-in-active"
      >
        2
      </button>
      <span
        class="pagination-dots"
      >
        …
      </span>
      <button
        class="sort sort-in-active"
      >
        5
      </button>
    </div>
    <div
      class="flex gap-2 mt-1"
    >
      <button
        class="sort-next"
        disabled=""
      >
        Prev
      </button>
      <button
        class="sort-next"
      >
        Next
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginationComponent > matches snapshot with last page 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center gap-2"
  >
    <div
      class="flex flex-wrap justify-center gap-1 overflow-hidden"
    >
      <button
        class="sort sort-in-active"
      >
        1
      </button>
      <span
        class="pagination-dots"
      >
        …
      </span>
      <button
        class="sort sort-in-active"
      >
        4
      </button>
      <button
        class="sort sort-active"
        disabled=""
      >
        5
      </button>
    </div>
    <div
      class="flex gap-2 mt-1"
    >
      <button
        class="sort-next"
      >
        Prev
      </button>
      <button
        class="sort-next"
        disabled=""
      >
        Next
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginationComponent > matches snapshot with middle page 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center gap-2"
  >
    <div
      class="flex flex-wrap justify-center gap-1 overflow-hidden"
    >
      <button
        class="sort sort-in-active"
      >
        1
      </button>
      <button
        class="sort sort-in-active"
      >
        2
      </button>
      <button
        class="sort sort-active"
        disabled=""
      >
        3
      </button>
      <button
        class="sort sort-in-active"
      >
        4
      </button>
      <button
        class="sort sort-in-active"
      >
        5
      </button>
    </div>
    <div
      class="flex gap-2 mt-1"
    >
      <button
        class="sort-next"
      >
        Prev
      </button>
      <button
        class="sort-next"
      >
        Next
      </button>
    </div>
  </div>
</DocumentFragment>
`;
